deployments/api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: today-api
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: today-api
  template:
    metadata:
      labels:
        app: today-api
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: today-api
          image: mattiejas/today-api:latest-arm64
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: today-api-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: today-api
  ports:
    - port: 5000
      targetPort: 3001
