deployments/ui.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: today-ui
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: today-ui
  template:
    metadata:
      labels:
        app: today-ui
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: today-ui
          image: mattiejas/today-ui:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: today-ui-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: today-ui
  ports:
    - port: 4000
      targetPort: 3000
