deployments/api-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: today-api-ingress
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`mattiejas.sh`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - kind: Service
          name: today-api-service
          port: 5000
