deployments/ui-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: today-ui-ingress
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`today.mattiejas.sh`) || Host(`www.today.mattiejas.sh`)
      kind: Rule
      services:
        - kind: Service
          name: today-ui-service
          port: 4000

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: today-ui-ingress-tls
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`today.mattiejas.sh`) || Host(`www.today.mattiejas.sh`)
      kind: Rule
      services:
        - kind: Service
          name: today-ui-service
          port: 4000
  tls:
    certResolver: "mattiejasresolver"
    domains:
      - main: "today.mattiejas.sh"
        sans:
          - "www.today.mattiejas.sh"
